# docker-stats-ui

./: LICENSE  README.md  pyproject.toml
app/: main.py  theme.yaml
app/components/: __init__.py  checkbox.py
app/styles/: __init__.py
app/templates/: index.html
scripts/: entrypoint.py
