[tool.poetry]
name = "docker-stats-ui"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["haiyee99 <37543660+haiyee99@users.noreply.github.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "app" },
]

[tool.poetry.scripts]
docker-stats-ui = "scripts.entrypoint:main"

[tool.poetry.dependencies]
python = "^3.8"
docker = ">=5.0,<7"
bokeh = "~3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
